--- a/noleggio-lungo-termine-old.html
+++ b/noleggio-lungo-termine-old.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><!--  Last Published: Fri Jul 04 2025 08:53:22 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6854bddea1fee9b351ea44c9" data-wf-site="6854bddea1fee9b351ea44c0">
+<html data-wf-page="685506265e9cc865a7985231" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
-  <title>Galdieri</title>
+  <title>Noleggio Lungo Termine</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -17,26 +17,18 @@
 </head>
 <body class="body">
   <div class="w-layout-blockcontainer top-bar w-container">
-    <a href="index.html" aria-current="page" class="link-block w-inline-block w--current"><img src="images/logo.png" loading="eager" alt="" class="image"></a>
+    <a href="index.html" class="link-block w-inline-block"><img src="images/logo.png" loading="eager" alt="" class="image"></a>
   </div>
   <div class="w-layout-blockcontainer container-6 w-container">
     <div class="w-layout-blockcontainer container-3 w-container">
-      <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b45-51ea44c9" class="w-layout-layout quick-stack wf-layout-layout">
-        <div class="w-layout-cell cell-home">
-          <div class="w-layout-grid grid-3">
-            <a href="https://galdierirent.it/noleggio-breve-termine/?c=bcea18fb55f732d26b775f604520260590de8010%" class="button-menu w-button">Noleggio auto a breve termine</a>
-            <link rel="prefetch" href="https://galdierirent.it/noleggio-breve-termine/?c=bcea18fb55f732d26b775f604520260590de8010%">
-            <a href="noleggio-lungo-termine.html" class="button-menu w-button">Noleggio auto a lungo termine</a>
-            <a href="acquisto-auto-nuove.html" class="button-menu w-button">acquisto auto nuove</a>
-            <a data-w-id="2c251fc4-9fa5-a36b-f13a-a92d7787c153" href="acquisto-auto-usate.html" class="button-menu w-button">acquisto auto usate</a>
-          </div>
-        </div>
-        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-51ea44c9" class="w-layout-cell cell-2">
-          <div class="w-layout-blockcontainer vuoto w-container">
-            <h1 class="heading-main">Ministero della Difesa</h1>
-            <h2 class="heading-sottotitolo">convenzione per l&#x27;automotive</h2>
-          </div>
-        </div>
+      <h1 class="heading-ministero-bis">Ministero della Difesa</h1>
+      <h2 class="heading-sottotitolo-bis">Noleggio Auto a Lungo Termine</h2>
+      <div class="code-embed-2 w-embed w-script">
+        <div data-tf-live="01JYG3P4KPC4PZAA2WAFF6P132"></div>
+        <script loading="eager" src="https://embed.typeform.com/next/embed.js"></script>
+      </div>
+      <div data-w-id="eac372a5-060e-ade2-8f37-0407f4d84c3d" class="w-layout-blockcontainer container-loading w-container">
+        <div class="w-layout-hflex flex-block-2"><img src="images/loading.gif" loading="eager" alt="" class="image-2"></div>
       </div>
     </div>
   </div>
