--- a/noleggio-lungo-termine.html
+++ b/noleggio-lungo-termine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 04 2025 08:53:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jul 04 2025 09:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="686777b7c4ab03f18e7e6483" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
         <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b46-8e7e6483" class="w-layout-cell cell-long">
           <div class="w-layout-grid grid-lungo-termine">
             <p id="w-node-d340159a-11ba-95cd-9b83-8e9830fcb109-8e7e6483" class="paragraph">Visita il sito dedicato al noleggio a lungo termine tramite il link sottostante e contattaci per ulteriori informazioni.</p>
-            <a id="w-node-d11719b5-6249-b3f8-d796-99236687a9fa-8e7e6483" href="https://galdierirent.it/noleggio-lungo-termine/?id_tipologia=&amp;brand=&amp;car_size=&amp;alimentazione=&amp;durata=&amp;km=&amp;ordering=price_1&amp;gotopage=1" target="_blank" class="button-link w-button">noleggio lungo termine</a>
+            <a href="https://galdierirent.it/noleggio-lungo-termine/?id_tipologia=&amp;brand=&amp;car_size=&amp;alimentazione=&amp;durata=&amp;km=&amp;ordering=price_1&amp;gotopage=1" target="_blank" class="button-link w-button">noleggio lungo termine</a>
             <link rel="prefetch" href="https://galdierirent.it/noleggio-lungo-termine/?id_tipologia=&amp;brand=&amp;car_size=&amp;alimentazione=&amp;durata=&amp;km=&amp;ordering=price_1&amp;gotopage=1">
             <div id="w-node-d5589470-bbcf-c92c-b681-324af7c5a99a-8e7e6483" data-w-id="d5589470-bbcf-c92c-b681-324af7c5a99a" class="code-embed w-embed w-script">
               <div data-tf-live="01JZA3CTEVF6WMWF88H9ZFDH8F"></div>
