--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 04 2025 09:10:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jul 05 2025 11:49:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6854bddea1fee9b351ea44c9" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -24,8 +24,8 @@
       <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b45-51ea44c9" class="w-layout-layout quick-stack wf-layout-layout">
         <div class="w-layout-cell cell-home">
           <div class="w-layout-grid grid-3">
-            <a href="https://galdierirent.it/noleggio-breve-termine/?c=bcea18fb55f732d26b775f604520260590de8010%" class="button-menu w-button">Noleggio auto a breve termine</a>
-            <link rel="prefetch" href="https://galdierirent.it/noleggio-breve-termine/?c=bcea18fb55f732d26b775f604520260590de8010%">
+            <a href="https://noleggio-breve-termine.html" class="button-menu w-button">Noleggio auto a breve termine</a>
+            <link rel="prefetch" href="https://noleggio-breve-termine.html">
             <a href="noleggio-lungo-termine.html" class="button-menu w-button">Noleggio auto a lungo termine</a>
             <a href="acquisto-auto-nuove.html" class="button-menu w-button">acquisto auto nuove</a>
             <a data-w-id="2c251fc4-9fa5-a36b-f13a-a92d7787c153" href="acquisto-auto-usate.html" class="button-menu w-button">acquisto auto usate</a>
