--- a/acquisto-auto-nuove.html
+++ b/acquisto-auto-nuove.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 07 2025 12:40:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 16 2025 20:49:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68553e8eb9b4ed96818eaca9" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -21,11 +21,12 @@
   </div>
   <div class="w-layout-blockcontainer container-6 w-container">
     <div class="w-layout-blockcontainer container-3 w-container">
-      <h1 class="heading-ministero-bis">Ministero della Difesa</h1>
-      <h2 class="heading-sottotitolo-bis">Acquisto Auto Nuove</h2>
+      <h1 class="heading-ministero-bis">Convenzione per il <br>Ministero della Difesa</h1>
+      <h2 class="heading-sottotitolo-bis">Acquisto Autovetture Nuove</h2>
       <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b45-818eaca9" class="w-layout-layout quick-stack wf-layout-layout">
         <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b46-818eaca9" class="w-layout-cell cell">
           <div class="w-layout-grid grid-brand">
+            <p class="paragraph">Guarda le offerte dedicate per la convenzione del Ministero della Difesa e contattaci per un preventivo personalizzato.</p>
             <div data-hover="false" data-delay="2" class="dropdown-2 w-dropdown">
               <div class="dropdown-toggle-2 w-dropdown-toggle">
                 <div class="w-icon-dropdown-toggle"></div>
@@ -39,13 +40,13 @@
                 <a data-w-id="7da95151-1d28-a2eb-fa6c-7a2f7102e4a6" href="#" class="button w-button">Skoda</a>
               </nav>
             </div>
-            <div id="w-node-d5589470-bbcf-c92c-b681-324af7c5a99a-818eaca9" data-w-id="d5589470-bbcf-c92c-b681-324af7c5a99a" class="code-embed w-embed w-script">
-              <div data-tf-live="01JYB7P5091T9166FN23C2F2KF"></div>
+            <div class="code-embed w-embed w-script">
+              <div data-tf-live="01K0AE9JP1XTMTDHXPEX6J6P6W"></div>
               <script src="https://embed.typeform.com/next/embed.js"></script>
             </div>
           </div>
         </div>
-        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-818eaca9" class="w-layout-cell cell-2">
+        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-818eaca9" class="w-layout-cell cell-lista-nuove">
           <div data-w-id="0b3c7ad1-1389-ec42-e5e7-7ed7b19ea87a" class="w-layout-blockcontainer list w-container">
             <div id="w-node-_0b3c7ad1-1389-ec42-e5e7-7ed7b19ea87b-818eaca9" class="w-layout-layout stack-per-listino wf-layout-layout">
               <div class="w-layout-cell cell-logo"><img src="images/Stellantis.png" loading="lazy" alt="" height="50" class="image-logo"></div>
@@ -104,7 +105,7 @@
             </div>
           </div>
           <div data-w-id="b13a5f39-e6ce-8065-605a-459208957ff5" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-b13a5f39-e6ce-8065-605a-459208957ff6-818eaca9" class="w-layout-layout stack-per-listino wf-layout-layout">
+            <div id="w-node-b13a5f39-e6ce-8065-605a-459208957ff6-818eaca9" class="w-layout-layout stack-per-listino-bis wf-layout-layout">
               <div class="w-layout-cell cell-logo-space"><img src="images/emc_auto_150x50.png" loading="lazy" alt="" class="image-logo"></div>
               <div class="w-layout-cell">
                 <div class="w-layout-grid grid-modelli">
@@ -123,7 +124,7 @@
             </div>
           </div>
           <div data-w-id="72f1d6e9-9ace-9ee9-f8c4-c908289b65f7" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-b495cca2-42ac-20b7-8f96-de0a7398b4d0-818eaca9" class="w-layout-layout stack-per-listino wf-layout-layout">
+            <div id="w-node-b495cca2-42ac-20b7-8f96-de0a7398b4d0-818eaca9" class="w-layout-layout stack-per-listino-bis wf-layout-layout">
               <div class="w-layout-cell cell-logo"><img src="images/OJ-Red-vertical-line-logo-1.webp" loading="lazy" sizes="100vw" height="50" alt="" srcset="images/OJ-Red-vertical-line-logo-1-p-500.webp 500w, images/OJ-Red-vertical-line-logo-1-p-800.webp 800w, images/OJ-Red-vertical-line-logo-1-p-1080.webp 1080w, images/OJ-Red-vertical-line-logo-1.webp 1920w" class="image-logo-reduce"></div>
               <div class="w-layout-cell">
                 <div class="w-layout-grid grid-modelli-allestimento">
