--- a/noleggio-lungo-termine-old.html
+++ b/noleggio-lungo-termine-old.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><!--  Last Published: Wed Jul 16 2025 20:49:03 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="685fec901ee1b3dd8a920774" data-wf-site="6854bddea1fee9b351ea44c0">
+<html data-wf-page="685506265e9cc865a7985231" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
-  <title>Acquisto Auto Usate</title>
+  <title>Noleggio Lungo Termine</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -21,21 +21,14 @@
   </div>
   <div class="w-layout-blockcontainer container-6 w-container">
     <div class="w-layout-blockcontainer container-3 w-container">
-      <h1 class="heading-ministero-bis">Convenzione per il <br>Ministero della Difesa</h1>
-      <h2 class="heading-sottotitolo-bis">Acquisto Autovetture Usate</h2>
-      <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b45-8a920774" class="w-layout-layout quick-stack wf-layout-layout">
-        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b46-8a920774" class="w-layout-cell cell-long">
-          <div class="w-layout-grid grid-brand-usato">
-            <p id="w-node-d340159a-11ba-95cd-9b83-8e9830fcb109-8a920774" class="paragraph">La convenzione prevede uno sconto sul prezzo delle vetture dipendente dal segmento:<br><br> - Segmento A: sconto di €300<br> - Segmento B: sconto di €400<br> - Segmento C e SUV: sconto di €500<br><br>In aggiunta, upgrade della garanzia, offrendo in omaggio il secondo anno di copertura.<br>‍<br>Visita il sito dedicato all&#x27;usato tramite il link sottostante e contattaci per ulteriori informazioni.</p>
-            <a href="https://www.galdieriauto.it/auto-usate/" target="_blank" class="button-link w-button">auto usate</a>
-            <link rel="prefetch" href="https://www.galdieriauto.it/auto-usate/">
-            <div id="w-node-d5589470-bbcf-c92c-b681-324af7c5a99a-8a920774" data-w-id="d5589470-bbcf-c92c-b681-324af7c5a99a" class="code-embed w-embed w-script">
-              <div data-tf-live="01JYVD04KRRFNNEMPYEYWXYDQA"></div>
-              <script src="https://embed.typeform.com/next/embed.js"></script>
-            </div>
-          </div>
-        </div>
-        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-8a920774" class="w-layout-cell cell-2"></div>
+      <h1 class="heading-ministero-bis">Ministero della Difesa</h1>
+      <h2 class="heading-sottotitolo-bis">Noleggio Auto a Lungo Termine</h2>
+      <div class="code-embed-2 w-embed w-script">
+        <div data-tf-live="01JYG3P4KPC4PZAA2WAFF6P132"></div>
+        <script loading="eager" src="https://embed.typeform.com/next/embed.js"></script>
+      </div>
+      <div data-w-id="eac372a5-060e-ade2-8f37-0407f4d84c3d" class="w-layout-blockcontainer container-loading w-container">
+        <div class="w-layout-hflex flex-block-2"><img src="images/loading.gif" loading="eager" alt="" class="image-2"></div>
       </div>
     </div>
   </div>
