--- a/noleggio-lungo-termine.html
+++ b/noleggio-lungo-termine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 07 2025 12:40:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 16 2025 20:49:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="686777b7c4ab03f18e7e6483" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -21,12 +21,12 @@
   </div>
   <div class="w-layout-blockcontainer container-6 w-container">
     <div class="w-layout-blockcontainer container-3 w-container">
-      <h1 class="heading-ministero-bis">Ministero della Difesa</h1>
+      <h1 class="heading-ministero-bis">Convenzione per il <br>Ministero della Difesa</h1>
       <h2 class="heading-sottotitolo-bis">Noleggio Lungo Termine</h2>
       <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b45-8e7e6483" class="w-layout-layout quick-stack wf-layout-layout">
         <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b46-8e7e6483" class="w-layout-cell cell-long">
           <div class="w-layout-grid grid-lungo-termine">
-            <p id="w-node-d340159a-11ba-95cd-9b83-8e9830fcb109-8e7e6483" class="paragraph">Visita il sito dedicato al noleggio a lungo termine tramite il link sottostante e contattaci per ulteriori informazioni.</p>
+            <p id="w-node-d340159a-11ba-95cd-9b83-8e9830fcb109-8e7e6483" class="paragraph">La convenzione prevede una fuel card del valore di 150 euro per ogni contratto di noleggio stipulato. <br>‍<br>Visita il sito dedicato al Noleggio a Lungo Termine tramite il link sottostante e contattaci per una quotazione personalizzata.</p>
             <a href="https://galdierirent.it/noleggio-lungo-termine/?id_tipologia=&amp;brand=&amp;car_size=&amp;alimentazione=&amp;durata=&amp;km=&amp;ordering=price_1&amp;gotopage=1" target="_blank" class="button-link w-button">noleggio lungo termine</a>
             <link rel="prefetch" href="https://galdierirent.it/noleggio-lungo-termine/?id_tipologia=&amp;brand=&amp;car_size=&amp;alimentazione=&amp;durata=&amp;km=&amp;ordering=price_1&amp;gotopage=1">
             <div id="w-node-d5589470-bbcf-c92c-b681-324af7c5a99a-8e7e6483" data-w-id="d5589470-bbcf-c92c-b681-324af7c5a99a" class="code-embed w-embed w-script">
@@ -35,243 +35,7 @@
             </div>
           </div>
         </div>
-        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-8e7e6483" class="w-layout-cell cell-2">
-          <div data-w-id="0b3c7ad1-1389-ec42-e5e7-7ed7b19ea87a" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-_0b3c7ad1-1389-ec42-e5e7-7ed7b19ea87b-8e7e6483" class="w-layout-layout stack-per-listino wf-layout-layout">
-              <div class="w-layout-cell cell-logo"><img src="images/Stellantis.png" loading="lazy" alt="" height="50" class="image-logo"></div>
-              <div class="w-layout-cell">
-                <div class="w-layout-grid grid-brand-modelli-pdf">
-                  <div class="titolo-lista">Brand</div>
-                  <div class="titolo-lista">Modello</div>
-                  <div class="titolo-lista">Preventivo*</div>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">500 Red E</div>
-                  <a href="documents/500-RED-E.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">600 Hybrid</div>
-                  <a href="documents/600-HYBRID.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">Pandina</div>
-                  <a href="documents/PANDINA.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">Panda</div>
-                  <a href="documents/PANDA.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">Grande Panda</div>
-                  <a href="documents/GRANDE-PANDA-POP.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">Tipo</div>
-                  <a href="documents/TIPO.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Fiat</div>
-                  <div class="item-lista">Doblo</div>
-                  <a href="documents/DOBLO.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Alfa Romeo</div>
-                  <div class="item-lista">Junior</div>
-                  <a href="documents/JUNIOR.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Alfa Romeo</div>
-                  <div class="item-lista">Giulia Diesel</div>
-                  <a href="documents/GIULIA-DIESEL.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Alfa Romeo</div>
-                  <div class="item-lista">Stelvio Diesel</div>
-                  <a href="documents/STELVIO-DIESEL.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Alfa Romeo</div>
-                  <div class="item-lista">Tonale Diesel</div>
-                  <a href="documents/TONALE-DIESEL.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Jeep</div>
-                  <div class="item-lista">Avenger</div>
-                  <a href="documents/AVENGER.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Jeep</div>
-                  <div class="item-lista">Compass MHEV</div>
-                  <a href="documents/COMPASS-MHEV.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                  <div class="item-lista">Jeep</div>
-                  <div class="item-lista">Renegade</div>
-                  <a href="documents/RENEGADE-MHEV.pdf" target="_blank" class="link-a-preventivo-pdf">preventivo</a>
-                </div>
-              </div>
-              <div class="w-layout-cell cell-nota">
-                <div class="text-block-4"><strong class="bold-text">*</strong><em class="italic-text">preventivi a titolo di esempio, modelli ed allestimenti sono personalizzabili</em></div>
-              </div>
-            </div>
-          </div>
-          <div data-w-id="b13a5f39-e6ce-8065-605a-459208957ff5" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-b13a5f39-e6ce-8065-605a-459208957ff6-8e7e6483" class="w-layout-layout stack-per-listino wf-layout-layout">
-              <div class="w-layout-cell cell-logo-space"><img src="images/emc_auto_150x50.png" loading="lazy" alt="" class="image-logo"></div>
-              <div class="w-layout-cell">
-                <div class="w-layout-grid grid-modelli">
-                  <div class="titolo-lista">Modello</div>
-                  <div class="titolo-lista">Sconto Riservato</div>
-                  <div class="item-lista">4</div>
-                  <div class="item-lista">18%</div>
-                  <div class="item-lista">6</div>
-                  <div class="item-lista">16%</div>
-                  <div class="item-lista">7</div>
-                  <div class="item-lista">13%</div>
-                  <div class="item-lista">Yudo</div>
-                  <div class="item-lista">20%</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-w-id="72f1d6e9-9ace-9ee9-f8c4-c908289b65f7" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-b495cca2-42ac-20b7-8f96-de0a7398b4d0-8e7e6483" class="w-layout-layout stack-per-listino wf-layout-layout">
-              <div class="w-layout-cell cell-logo"><img src="images/OJ-Red-vertical-line-logo-1.webp" loading="lazy" sizes="100vw" height="50" alt="" srcset="images/OJ-Red-vertical-line-logo-1-p-500.webp 500w, images/OJ-Red-vertical-line-logo-1-p-800.webp 800w, images/OJ-Red-vertical-line-logo-1-p-1080.webp 1080w, images/OJ-Red-vertical-line-logo-1.webp 1920w" class="image-logo-reduce"></div>
-              <div class="w-layout-cell">
-                <div class="w-layout-grid grid-modelli-allestimento">
-                  <div class="titolo-lista">Modello</div>
-                  <div class="titolo-lista">Allestimento</div>
-                  <div class="titolo-lista">Sconto Riservato</div>
-                  <div class="item-lista">Omoda 5</div>
-                  <div class="item-lista">Comfort/Premium</div>
-                  <div class="item-lista">16%</div>
-                  <div class="item-lista">Omoda 5 EV</div>
-                  <div class="item-lista">Comfort/Premium</div>
-                  <div class="item-lista">21%</div>
-                  <div class="item-lista">Jaecoo 7</div>
-                  <div class="item-lista">Premium/Exclusive</div>
-                  <div class="item-lista">17%</div>
-                  <div class="item-lista">Jaecoo 7 SHS</div>
-                  <div class="item-lista">Premium</div>
-                  <div class="item-lista">16%</div>
-                  <div class="item-lista">Jaecoo 7 SHS</div>
-                  <div class="item-lista">Exclusive</div>
-                  <div class="item-lista">14%</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div data-w-id="5fb2d41e-83b9-5e4c-10fc-3d433b19480a" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-_79df2b3f-7b52-8f5d-697c-c1acf41e60b4-8e7e6483" class="w-layout-layout stack-per-listino wf-layout-layout">
-              <div class="w-layout-cell cell-logo"><img src="images/cropped-BYD-Cibubur-Logo.png" loading="lazy" sizes="100vw" height="50" alt="" srcset="images/cropped-BYD-Cibubur-Logo-p-500.png 500w, images/cropped-BYD-Cibubur-Logo.png 600w" class="image-logo"></div>
-              <div class="w-layout-cell">
-                <div class="w-layout-grid grid-modelli-allestimento">
-                  <div class="titolo-lista">Modello</div>
-                  <div class="titolo-lista">Allestimento</div>
-                  <div class="titolo-lista">Sconto Riservato</div>
-                  <div class="item-lista">Dolphin</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">17%</div>
-                  <div class="item-lista">Dolphin</div>
-                  <div class="item-lista">Design</div>
-                  <div class="item-lista">17%</div>
-                  <div class="item-lista">Dolphin Surf</div>
-                  <div class="item-lista">Active</div>
-                  <div class="item-lista">9%</div>
-                  <div class="item-lista">Dolphin Surf</div>
-                  <div class="item-lista">Boost</div>
-                  <div class="item-lista">18%<strong>*</strong></div>
-                  <div class="item-lista">Dolphin Surf</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">14%</div>
-                  <div class="item-lista">Atto 2</div>
-                  <div class="item-lista">Active</div>
-                  <div class="item-lista">6%</div>
-                  <div class="item-lista">Atto 2</div>
-                  <div class="item-lista">Boost</div>
-                  <div class="item-lista">10%</div>
-                  <div class="item-lista">Atto 3</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">8%</div>
-                  <div class="item-lista">Atto 3</div>
-                  <div class="item-lista">Design</div>
-                  <div class="item-lista">8%</div>
-                  <div class="item-lista">Seal</div>
-                  <div class="item-lista">Design</div>
-                  <div class="item-lista">7%</div>
-                  <div class="item-lista">Seal</div>
-                  <div class="item-lista">Excellence AWD</div>
-                  <div class="item-lista">10%</div>
-                  <div class="item-lista">Seal U EV</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">10%</div>
-                  <div class="item-lista">Seal U EV</div>
-                  <div class="item-lista">Design</div>
-                  <div class="item-lista">10%</div>
-                  <div class="item-lista">Seal U DM-I</div>
-                  <div class="item-lista">Boost</div>
-                  <div class="item-lista">12%</div>
-                  <div class="item-lista">Seal U DM-I</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">10%</div>
-                  <div class="item-lista">Seal U DM-I</div>
-                  <div class="item-lista">Design AWD</div>
-                  <div class="item-lista">15%</div>
-                  <div class="item-lista">Sealion 7</div>
-                  <div class="item-lista">Comfort</div>
-                  <div class="item-lista">8%</div>
-                  <div class="item-lista">Sealion 7</div>
-                  <div class="item-lista">Excellence AWD</div>
-                  <div class="item-lista">11%</div>
-                  <div class="item-lista">Tang</div>
-                  <div class="item-lista">Flagship</div>
-                  <div class="item-lista">13%</div>
-                </div>
-              </div>
-              <div class="w-layout-cell cell-nota">
-                <div class="text-block-4"><strong class="bold-text">*</strong> <em class="italic-text">solo con finanziamento in promo</em></div>
-              </div>
-            </div>
-          </div>
-          <div data-w-id="16b0a58b-3660-cf57-c9c1-b8e2526d7dfa" class="w-layout-blockcontainer list w-container">
-            <div id="w-node-_16b0a58b-3660-cf57-c9c1-b8e2526d7dfb-8e7e6483" class="w-layout-layout stack-per-listino wf-layout-layout">
-              <div class="w-layout-cell cell-logo"><img src="images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407.png" loading="lazy" sizes="100vw" height="50" alt="" srcset="images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407-p-500.png 500w, images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407-p-800.png 800w, images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407-p-1080.png 1080w, images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407-p-1600.png 1600w, images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407-p-2000.png 2000w, images/Skoda_Wordmark_RGB_Emerald_Green_e2c8d407.png 2560w" class="image-logo"></div>
-              <div class="w-layout-cell">
-                <div class="w-layout-grid grid-modelli-allestimento-l">
-                  <div class="titolo-lista-s">Modello</div>
-                  <div class="titolo-lista-s">Sconto Riservato</div>
-                  <div class="titolo-lista-s">Rottamazione*</div>
-                  <div class="titolo-lista-s">Extra Promo</div>
-                  <div class="item-lista-s">Fabia</div>
-                  <div class="item-lista-s">14%</div>
-                  <div class="item-lista-s">1.300 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Scala</div>
-                  <div class="item-lista-s">16%</div>
-                  <div class="item-lista-s">2.000 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Kamiq</div>
-                  <div class="item-lista-s">13%</div>
-                  <div class="item-lista-s">1.000 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Octavia</div>
-                  <div class="item-lista-s">16%</div>
-                  <div class="item-lista-s">2.500 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Octavia Wagon</div>
-                  <div class="item-lista-s">16%</div>
-                  <div class="item-lista-s">2.500 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Karoq</div>
-                  <div class="item-lista-s">15%</div>
-                  <div class="item-lista-s">1.000 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Superb Wagon</div>
-                  <div class="item-lista-s">15%</div>
-                  <div class="item-lista-s">1.000 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Kodiaq</div>
-                  <div class="item-lista-s">14%</div>
-                  <div class="item-lista-s">1.500 €</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-s">Elroq (elettrica)</div>
-                  <div class="item-lista-s">9%</div>
-                  <div class="item-lista-s">1.800 €</div>
-                  <div id="w-node-_16b0a58b-3660-cf57-c9c1-b8e2526d7e50-8e7e6483" class="item-lista-xs">Voucher ricarica  €1.150 con Fin. Clever Value</div>
-                  <div class="item-lista-s">Enyaq (elettrica)</div>
-                  <div class="item-lista-s">10%</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-xs"> €1.500 extra sconto con Fin. Clever Value</div>
-                  <div class="item-lista-s">Enyaq Coupé (elettrica)</div>
-                  <div class="item-lista-s">10%</div>
-                  <div class="item-lista-s">-</div>
-                  <div class="item-lista-xs">€3.000 extra sconto con Fin. Clever Value</div>
-                </div>
-              </div>
-              <div class="w-layout-cell cell-nota">
-                <div class="text-block-4"><strong><em>*</em></strong><em class="italic-text-2"> Sconto Rottamazione cumulabile con Sconto Riservato</em></div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-8e7e6483" class="w-layout-cell cell-2"></div>
       </div>
     </div>
   </div>
