--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jul 07 2025 12:40:53 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jul 16 2025 20:49:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6854bddea1fee9b351ea44c9" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -33,8 +33,8 @@
         </div>
         <div id="w-node-_90c44447-dd5e-c5c4-1108-cedf26215b47-51ea44c9" class="w-layout-cell cell-2">
           <div class="w-layout-blockcontainer vuoto w-container">
-            <h1 class="heading-main">Ministero della Difesa</h1>
-            <h2 class="heading-sottotitolo">convenzione per l&#x27;automotive</h2>
+            <h1 class="heading-main">Convenzione per il <br>Ministero della Difesa</h1>
+            <h2 class="heading-sottotitolo"></h2>
           </div>
         </div>
       </div>
