--- a/acquisto-auto-nuove.html
+++ b/acquisto-auto-nuove.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jul 29 2025 06:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 13 2025 06:25:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68553e8eb9b4ed96818eaca9" data-wf-site="6854bddea1fee9b351ea44c0">
 <head>
   <meta charset="utf-8">
@@ -108,18 +108,26 @@
             <div id="w-node-b13a5f39-e6ce-8065-605a-459208957ff6-818eaca9" class="w-layout-layout stack-per-listino-bis wf-layout-layout">
               <div class="w-layout-cell cell-logo-space"><img src="images/emc_auto_150x50.png" loading="lazy" alt="" class="image-logo"></div>
               <div class="w-layout-cell">
-                <div class="w-layout-grid grid-modelli">
+                <div class="w-layout-grid grid-modelli-allestimento">
                   <div class="titolo-lista">Modello</div>
-                  <div class="titolo-lista">Sconto Riservato</div>
+                  <div class="titolo-lista">Sconto Benzina</div>
+                  <div class="titolo-lista">Sconto GPL</div>
                   <div class="item-lista">4</div>
+                  <div class="item-lista">16%</div>
                   <div class="item-lista">18%</div>
                   <div class="item-lista">6</div>
-                  <div class="item-lista">16%</div>
+                  <div class="item-lista">15%</div>
+                  <div class="item-lista">17%</div>
                   <div class="item-lista">7</div>
                   <div class="item-lista">13%</div>
+                  <div class="item-lista">-</div>
                   <div class="item-lista">Yudo</div>
                   <div class="item-lista">20%</div>
+                  <div class="item-lista">-</div>
                 </div>
+              </div>
+              <div class="w-layout-cell cell-nota">
+                <div class="text-block-4"><strong><em class="nota-no-italic">Sconto riservato per ordini su vetture disponibili entro il 31/10</em></strong></div>
               </div>
             </div>
           </div>
@@ -146,6 +154,9 @@
                   <div class="item-lista">Jaecoo 7 SHS</div>
                   <div class="item-lista">Exclusive</div>
                   <div class="item-lista">14%</div>
+                  <div class="item-lista">Omoda 9 SHS</div>
+                  <div class="item-lista">Premium</div>
+                  <div class="item-lista">15%</div>
                 </div>
               </div>
             </div>
@@ -166,13 +177,13 @@
                   <div class="item-lista">17%</div>
                   <div class="item-lista">Dolphin Surf</div>
                   <div class="item-lista">Active</div>
-                  <div class="item-lista">9%</div>
+                  <div class="item-lista">9%<strong>*</strong></div>
                   <div class="item-lista">Dolphin Surf</div>
                   <div class="item-lista">Boost</div>
                   <div class="item-lista">18%<strong>*</strong></div>
                   <div class="item-lista">Dolphin Surf</div>
                   <div class="item-lista">Comfort</div>
-                  <div class="item-lista">14%</div>
+                  <div class="item-lista">14%<strong>*</strong></div>
                   <div class="item-lista">Atto 2</div>
                   <div class="item-lista">Active</div>
                   <div class="item-lista">6%</div>
